package at.spengergasse.sj2324posproject.domain;

enum BookStatus {
    AVAILABLE,
    BORROWED,
    MUST_BE_RETURNED
}
