package at.spengergasse.sj2324posproject.domain;

public enum Gender {
    MALE,
    FEMALE,
    UNKNOWN,
    OTHER
}
