package at.spengergasse.sj2324posproject.domain;

public enum RequestStatus {
    PENDING,
    APPROVED,
    REJECTED
}
