package at.spengergasse.sj2324posproject.domain;

public enum UserRole {
    ADMIN,
    STANDARD
}
